@@ -22,6 +22,7 @@ unusable \
   kernel-image-2.4.27-lart \
   kernel-image-2.4.27-riscpc \
   kernel-image-2.4.27-riscstation \
+  linux-image-2.6-iop32x \
   linux-image-2.6-ixp4xx \
   linux-image-2.6-nslu2 \
   linux-image-2.6-rpc \
