@@ -6,6 +6,7 @@ kernel-2.6 linux-image-2.6-nslu2
 usable \
   linux-image-2.6-nslu2
 unusable \
+  linux-image-2.6-iop32x \
   linux-image-2.6-ixp4xx \
   linux-image-2.6-netwinder \
   linux-image-2.6-rpc \
