@@ -14,6 +14,10 @@ base-installer (1.64) UNRELEASED; urgency=low
   [ Frans Pop ]
   * Use separate variable for selected ramdisk generator.
 
+  [ Martin Michlmayr ]
+  * Handle the ARM sub-arches iop32x, iop33x and ixp4xx.
+  * Add a test suite entry for arm/iop32x based on a Thecus N2100.
+
  -- Frans Pop <fjp@debian.org>  Thu, 13 Jul 2006 12:13:10 +0200
 
 base-installer (1.63) unstable; urgency=low
